@@ -322,14 +322,26 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.5</version>
-				    <configuration>
-					<skipTests>false</skipTests>
-					<testFailureIgnore>true</testFailureIgnore>
-					<forkMode>once</forkMode>
-				    </configuration>
+				<version>2.22.0</version>
+				<configuration>
+				    <argLine>
+					--illegal-access=permit
+				    </argLine>
+				    <skipTests>false</skipTests>
+				    <testFailureIgnore>true</testFailureIgnore>
+				    <forkMode>once</forkMode>
+				</configuration>
 			</plugin>
-
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.22.0</version>
+				<configuration>
+				    <argLine>
+					--illegal-access=permit
+				    </argLine>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
